Dropped BatchId for Students and Faculty

--- a/public/css/navigation.css
+++ b/public/css/navigation.css
@@ -60,7 +60,7 @@ body {
     text-decoration: none;
     text-align: center;
     box-sizing: border-box;
-    margin-top: 90px;
+    margin-top: 10rem;
   
   }
   
