--- a/views/faculty-activities/roles.ejs
+++ b/views/faculty-activities/roles.ejs
@@ -48,6 +48,11 @@
     </div>
     <div class="assign">
         <form action="/faculty/activities/roles" method="POST">
+                <div class="form-control">
+                  <h4>Course Department Chair</h4>
+                  <input type="text" name="userId">
+                  <button value="course-department-chair" name="role" type="submit">Assign Role</button>
+                </div>
             <div class="form-control">
                 <h4>Course Coordinator</h4>
                 <input type="text" name="userId">
@@ -71,9 +76,6 @@
         </form>
     </div>
     </div>
-    
-
-
 </div>
 
 </body>
