--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -24,9 +24,9 @@
         <% } %>
       </div>
     </div>
-    <% if (role === "Student") { %>
+    <!-- <% if (role === "Student") { %>
     <a href="/student/project-milestones"><i class="fa-solid fa-hammer"></i><span>Project Milestones</span></a>
-    <% } %>
+    <% } %> -->
     <% if (role === "Faculty") { %>
       <a href="/faculty/capstone-projects"><i class="fa-solid fa-hammer"></i><span>Capstone Projects</span></a>
     <% } %>
