--- a/public/css/view.css
+++ b/public/css/view.css
@@ -24,6 +24,12 @@ body {
     margin-top: 1rem;
 }
 
+.description {
+  min-height: 10rem;
+  border-bottom: 2px solid black;
+  margin-top: 1rem;
+}
+
 a {
   text-decoration: none;
 }
@@ -54,6 +60,25 @@ a {
   bottom: 20px;
   left: 20px;
   right: 0;
+}
+
+.upload-file {
+  width: 15rem;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 1rem;
+  margin-bottom: 1rem;
+}
+
+.upload-file button {
+  background-color: #0070f3;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  margin-block: 1rem;
+  cursor: pointer;
 }
 
 
@@ -109,4 +134,5 @@ a {
     font-size: 0.8rem;
     color: #777;
   }
+  
   
