--- a/views/auth/student-register.ejs
+++ b/views/auth/student-register.ejs
@@ -16,6 +16,10 @@
         </center>
     <div class="container center">
         <div class="grayline"></div>
+        <% if(errorMessage) { %>
+            <% console.log(errorMessage) %>
+            <center><div><%= errorMessage %></div></center>
+        <% } %>
         <form action="/auth/register" method="POST">
             <div class="form-control">
                 <h4>First Name</h4>
@@ -48,6 +52,7 @@
             </div>
             <div class="form-control">
                 <button type="submit" class="button">Register</button>
+                <p>Already have an account? <a href="/auth/login">Login</a></p>
                 <input type="hidden" value="student" name="role">
             </div>
         </form>
