--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <link rel="stylesheet" href = "/css/auths.css">
 <head>
-        <title>Login Page</title>
+        <title>Login</title>
 </head>
 <body>
   <header>
@@ -40,7 +40,7 @@
           <center><a href="/auth/forgot-password">Forgot Password?</a></center>
         </div>
         <div class="form-links">
-          <center><a href="#">Click here for the tutorial</a></center>
+          <center><a href="https://docs.google.com/document/d/1MVZZAVgNXVd1DiKrVya-uEn1kORb8Mp3Ezru1qQpCsE/edit?usp=sharing" target="_blank">Click here for the tutorial</a></center>
         </div>
       </form>
     </div>
