--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,7 +21,7 @@
               <h4>Create Batch:</h4>
               <form action="/faculty/home" method="POST">
                 <input type="text" name="name">
-                <button type="submit" name="button" value="start">Start</button>
+                <button type="submit" name="button" value="start" id="batch-button">Start</button>
               </form>
             </div>
           <% } %>
