--- a/public/css/group.css
+++ b/public/css/group.css
@@ -33,6 +33,14 @@
   align-items: center;
 }
 
+.add-group .form-control, .add-group h4{
+  margin-block: 0px;
+}
+
+.add-group input[type="text"] {
+  margin-block: 1rem;
+}
+
 .card-group .group-columns {
   max-width: 10rem;
 }
@@ -56,17 +64,14 @@
 }
 
 .container button {
-  background-color: #0070f3;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  padding: 0.5rem 1rem;
-  cursor: pointer;
+    background-color: lightgrey;
+    border: none;
+    border-radius: 4px;
+    padding: 0rem 1rem;
+    cursor: pointer;
+    height: 1.8rem;
 }
 
-.container button:hover {
-  background-color: #0060df;
-}
 
 label {
   display: block;
