--- a/views/group.ejs
+++ b/views/group.ejs
@@ -13,7 +13,7 @@
 </head>
 <body>
   
-    <div class="container">
+    <div class="container big-container">
       <div class="header">
         <h1>Groups</h1>
       </div>
@@ -140,7 +140,6 @@
         </div>
       </div>
       
-    
     <script>
         function filterGroups() {
         const sectionSelect = document.getElementById("sectionFilter");
