--- a/public/css/form-submit.css
+++ b/public/css/form-submit.css
@@ -3,15 +3,16 @@ body {
 }
 
 .container {
-    width: 90%;
-    margin: 0 auto;
-    margin-inline: 250px 100px;
-    padding: 20px;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 1rem;
+  margin-left: 250px;
+  margin-right:3%;
 }
 
 .header {
-    border-bottom: 2px solid grey;
-    width: 78rem;
+    border-bottom: 1px solid grey;
+    width: 100%;
     margin-bottom: 1.5rem;
   }
 
@@ -21,7 +22,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 1rem;
     margin-bottom: 1rem;
-    width: 87%;
+    width: 100%;
     display: flex;
     align-items: center;
 }
